--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,9 @@
         <java-ee.verion>9.1.0</java-ee.verion>
         <sl4j.version>2.0.13</sl4j.version>
         <glassfish.version>2.0.0</glassfish.version>
+        <hibernate.version>5.6.15.Final</hibernate.version>
+        <jakarta.xml.version>3.0.1</jakarta.xml.version>
+        <jaxb-runtime.version>2.3.1</jaxb-runtime.version>
         <mysql-connector-version>8.4.0</mysql-connector-version>
         <maven-compiler-version>3.8.1</maven-compiler-version>
         <maven.compiler.source>22</maven.compiler.source>
@@ -32,6 +35,27 @@
             <groupId>org.glassfish.web</groupId>
             <artifactId>jakarta.servlet.jsp.jstl</artifactId>
             <version>${glassfish.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-entitymanager</artifactId>
+            <version>${hibernate.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>${hibernate.version}</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>jakarta.xml.bind</groupId>
+            <artifactId>jakarta.xml.bind-api</artifactId>
+            <version>${jakarta.xml.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.glassfish.jaxb</groupId>
+            <artifactId>jaxb-runtime</artifactId>
+            <version>2.3.1</version>
         </dependency>
         <dependency>
             <groupId>com.mysql</groupId>
