--- a/pom.xml
+++ b/pom.xml
@@ -9,34 +9,31 @@
     <url>http://maven.apache.org</url>
 
     <properties>
-        <java-version>22</java-version>
-        <lombok-version>1.18.32</lombok-version>
-        <java-ee.verion>9.1.0</java-ee.verion>
-        <sl4j.version>2.0.13</sl4j.version>
-        <glassfish.version>2.0.0</glassfish.version>
-        <mysql-connector-version>8.4.0</mysql-connector-version>
-        <maven-compiler-version>3.8.1</maven-compiler-version>
-        <maven.compiler.source>22</maven.compiler.source>
-        <maven.compiler.target>22</maven.compiler.target>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <javaee-api-version>7.0</javaee-api-version>
+        <jstl-version>1.2</jstl-version>
+        <lombok-version>1.18.6</lombok-version>
+        <hibernate-version>5.4.2.Final</hibernate-version>
+        <hibernate-validator-version>6.1.0.Alpha4</hibernate-validator-version>
+        <javax.validation-version>2.0.1.Final</javax.validation-version>
+        <mysql-connector-version>8.0.14</mysql-connector-version>
+        <spring-data-jpa-version>2.1.5.RELEASE</spring-data-jpa-version>
+        <spring.version>5.1.4.RELEASE</spring.version>
+        <maven-compiler-version>3.8.0</maven-compiler-version>
+        <java-version>11</java-version>
+        <commons-fileupload-version>1.4</commons-fileupload-version>
     </properties>
 
     <dependencies>
         <dependency>
-            <groupId>jakarta.platform</groupId>
-            <artifactId>jakarta.jakartaee-api</artifactId>
-            <version>${java-ee.verion}</version>
+            <groupId>javax</groupId>
+            <artifactId>javaee-api</artifactId>
+            <version>${javaee-api-version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>org.glassfish.web</groupId>
-            <artifactId>jakarta.servlet.jsp.jstl</artifactId>
-            <version>${glassfish.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.mysql</groupId>
-            <artifactId>mysql-connector-j</artifactId>
-            <version>${mysql-connector-version}</version>
+            <groupId>javax.servlet</groupId>
+            <artifactId>jstl</artifactId>
+            <version>${jstl-version}</version>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
@@ -45,26 +42,56 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
-            <version>${sl4j.version}</version>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-entitymanager</artifactId>
+            <version>${hibernate-version}</version>
         </dependency>
         <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-simple</artifactId>
-            <version>${sl4j.version}</version>
-            <scope>runtime</scope>
+            <groupId>org.hibernate.validator</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>${hibernate-validator-version}</version>
         </dependency>
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>3.8.1</version>
-            <scope>test</scope>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+            <version>${javax.validation-version}</version>
         </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>${mysql-connector-version}</version>
+        </dependency>
+
+        <!--Spring dependency starts -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-jdbc</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-jpa</artifactId>
+            <version>${spring-data-jpa-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context-support</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+        <!--Spring dependency ends -->
     </dependencies>
 
     <build>
-        <finalName>crud</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
