--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <javaee-api-version>7.0</javaee-api-version>
         <jstl-version>1.2</jstl-version>
         <lombok-version>1.18.6</lombok-version>
+        <thymeleaf.version>3.0.15.RELEASE</thymeleaf.version>
         <hibernate-version>5.4.2.Final</hibernate-version>
         <hibernate-validator-version>6.1.0.Alpha4</hibernate-validator-version>
         <javax.validation-version>2.0.1.Final</javax.validation-version>
@@ -87,6 +88,11 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-webmvc</artifactId>
             <version>${spring.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.thymeleaf</groupId>
+            <artifactId>thymeleaf-spring5</artifactId>
+            <version>${thymeleaf.version}</version>
         </dependency>
         <!--Spring dependency ends -->
     </dependencies>
